@@ -1,3 +1,8 @@
+2012-09-11  7.0.0-0 Nicolas Robidoux <nicolas.robidoux@gmail...>
+  * sigmoidal-contrast:
+  * Prevent out of range argument in HDRIR;
+  * Remove unnecessary initial ClampToQuantum.
+
 2012-09-10  7.0.0-0 Nicolas Robidoux <nicolas.robidoux@gmail...>
   * Direct computation, without LUT, of sigmoidal-contrast.
   * Fix re-declaration of i (at the top, and inside a conditional).
